Add game state manager
GameStateManager class:
 - Tracks current, previous, and next states
 - enum class StateId contains all states
 - Each state (eg. MainMenu) is to contain 6 cycle functions:
   - load, initialize, update, draw, free, and unload functions

Main.cpp game loop now uses a game state manager.
 - The game loop starts at the MainMenu state

Add 2 states, MainMenu and Level1:
 - The states have placeholder cycle functions
 - state .cpp files are in Source/States/
 - state .h files are in Include/States/

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -11,11 +11,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\States\Level1.cpp" />
     <ClCompile Include="Source\Main.cpp" />
+    <ClCompile Include="Source\States\MainMenu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".clang-format" />
     <None Include="Docs\Standards.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Include\GameStateManager.h" />
+    <ClInclude Include="Include\States\Level1.h" />
+    <ClInclude Include="Include\States\MainMenu.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
