Implement terrain using marching squares
Terrain.cpp and Terrain.h contains the implementation and interface of
the destructible terrain using marching squares algorithm.

About marching squares
 - Nodes are corners of cells
 - There are 16 possible configurations that the mesh of each cell can
   have

An example is provided in Level1 game state
 - Hold left click to delete terrain (dirt)
 - The terrain does not have collision

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="Source\States\Level1.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\States\MainMenu.cpp" />
+    <ClCompile Include="Source\Terrain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".clang-format" />
@@ -24,6 +25,7 @@
     <ClInclude Include="Include\GameStateManager.h" />
     <ClInclude Include="Include\States\Level1.h" />
     <ClInclude Include="Include\States\MainMenu.h" />
+    <ClInclude Include="Include\Terrain.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
