Add Start and End Goals
Water spawns from starting pipe
Water collides with end pipe to win

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\FluidSystem.cpp" />
+    <ClCompile Include="Source\StartEndPoint.cpp" />
     <ClCompile Include="Source\States\Level1.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\States\Level2.cpp" />
@@ -26,6 +27,7 @@
     <ClInclude Include="Include\Components.h" />
     <ClInclude Include="Include\FluidSystem.h" />
     <ClInclude Include="Include\GameStateManager.h" />
+    <ClInclude Include="Include\StartEndPoint.h" />
     <ClInclude Include="Include\States\Level1.h" />
     <ClInclude Include="Include\States\Level2.h" />
     <ClInclude Include="Include\States\MainMenu.h" />
