--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -40,6 +40,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\Terrain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Source\StartEndPoint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -78,6 +80,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Terrain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Include\StartEndPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
