Refactor: CollisionSystem.h definitions into CollisionSystem.cpp, FluidSystem Collisions into CollisionSystem.cpp
removed messy comments as well

todo: fix terrain clipping

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\CollisionSystem.cpp" />
     <ClCompile Include="Source\FluidSystem.cpp" />
     <ClCompile Include="Source\PortalSystem.cpp" />
     <ClCompile Include="Source\StartEndPoint.cpp" />
